Default Highcharts font to --xh-font-family

--- a/styles/vars.scss
+++ b/styles/vars.scss
@@ -358,6 +358,7 @@ body {
   // Charts
   //------------------------
   --xh-chart-bg: var(--chart-bg, var(--xh-bg));
+  --xh-chart-font-family: var(--xh-font-family);
 
 
   //------------------------
