--- a/cmp/chart/Chart.scss
+++ b/cmp/chart/Chart.scss
@@ -15,6 +15,11 @@
   z-index: 9999 !important;
 }
 
+// Default Highcharts font to match Hoist standard
+svg.highcharts-root {
+  font-family: var(--xh-chart-font-family) !important;
+}
+
 // Convenience class for optional use when specifying custom chart tooltips.
 // See Toolbox for example usage.
 .xh-chart-tooltip {
