--- a/desktop/cmp/tab/Tabs.scss
+++ b/desktop/cmp/tab/Tabs.scss
@@ -67,6 +67,7 @@
     align-items: baseline;
     font-family: var(--xh-tab-font-family);
     font-size: var(--xh-tab-font-size-px);
+    user-select: none;
 
     & > svg:first-child {
       margin: 0 0.4em 0 0;
