--- a/cmp/grid/Grid.scss
+++ b/cmp/grid/Grid.scss
@@ -104,16 +104,15 @@
     padding-right: 0;
   }
 
-  // Render badge on invalid cells
-  .ag-cell.xh-cell--invalid {
+  // Render badge on cells with validation issues
+  .ag-cell.xh-cell--invalid,
+  .xh-cell--warning {
     &::before {
       content: '';
       position: absolute;
       top: 0;
       right: 0;
       border-color: transparent;
-      border-right-color: var(--xh-intent-danger);
-      border-top-color: var(--xh-intent-danger);
       border-style: solid;
     }
 
@@ -123,6 +122,16 @@
       margin-top: 1px;
       margin-right: 3px;
     }
+  }
+
+  .ag-cell.xh-cell--invalid::before {
+    border-right-color: var(--xh-intent-danger);
+    border-top-color: var(--xh-intent-danger);
+  }
+
+  .ag-cell.xh-cell--warning::before {
+    border-right-color: var(--xh-intent-warning);
+    border-top-color: var(--xh-intent-warning);
   }
 
   // Render left / right group borders
@@ -136,25 +145,29 @@
 
   .xh-ag-grid {
     &--tiny {
-      .ag-cell.xh-cell--invalid::before {
+      .ag-cell.xh-cell--invalid::before,
+      .ag-cell.xh-cell--warning::before {
         border-width: 3px;
       }
     }
 
     &--compact {
-      .ag-cell.xh-cell--invalid::before {
+      .ag-cell.xh-cell--invalid::before,
+      .ag-cell.xh-cell--warning::before {
         border-width: 4px;
       }
     }
 
     &--standard {
-      .ag-cell.xh-cell--invalid::before {
+      .ag-cell.xh-cell--invalid::before,
+      .ag-cell.xh-cell--warning::before {
         border-width: 5px;
       }
     }
 
     &--large {
-      .ag-cell.xh-cell--invalid::before {
+      .ag-cell.xh-cell--invalid::before,
+      .ag-cell.xh-cell--warning::before {
         border-width: 6px;
       }
     }
