--- a/kit/onsen/styles.scss
+++ b/kit/onsen/styles.scss
@@ -24,12 +24,16 @@
     border: var(--xh-border-solid);
     border-radius: var(--xh-border-radius-px);
 
-    &:not(.xh-input-invalid):focus-within {
+    &:not(.xh-input-invalid):not(.xh-input-warning):focus-within {
       border-color: var(--xh-focus-outline-color);
     }
 
     &.xh-input-invalid {
       border: var(--xh-form-field-invalid-border);
+    }
+
+    &.xh-input-warning {
+      border: var(--xh-form-field-warning-border);
     }
   }
 }
