--- a/mobile/cmp/form/FormField.scss
+++ b/mobile/cmp/form/FormField.scss
@@ -23,7 +23,8 @@
 
   .xh-form-field-info,
   .xh-form-field-error-msg,
-  .xh-form-field-pending-msg {
+  .xh-form-field-pending-msg,
+  .xh-form-field-warning-msg {
     font-size: var(--xh-font-size-small-px);
     line-height: calc(var(--xh-font-size-small-px) + var(--xh-pad-px));
     color: var(--xh-text-color-muted);
@@ -36,12 +37,17 @@
     color: var(--xh-red);
   }
 
+  .xh-form-field-warning-msg {
+    color: var(--xh-orange);
+  }
+
   &.xh-form-field-invalid .xh-form-field-label {
     color: var(--xh-red);
   }
 
   &.xh-form-field-readonly {
-    .xh-form-field-error-msg {
+    .xh-form-field-error-msg,
+    .xh-form-field-warning-msg {
       display: none;
     }
 
