Implements an option for the topnav to show the users initials for the right nav popover button, rather than the hamburger menu icon

--- a/desktop/cmp/appbar/AppBar.scss
+++ b/desktop/cmp/appbar/AppBar.scss
@@ -20,6 +20,28 @@
     font-size: var(--xh-appbar-title-font-size-px);
     margin-right: var(--xh-pad-px);
   }
+
+  // When the hamburger menu is replaced with user initials for
+  // the top bar right nav popover button
+  .xh-user-profile-button {
+    border-radius: 50%;
+    border: var(--xh-border-solid);
+    cursor: pointer;
+    height: 32px;
+    line-height: 31px;
+    text-align: center;
+    width: 32px;
+
+    &:hover {
+      color: var(--xh-orange);
+      border-color: var(--xh-orange) !important;
+      background-color: transparent !important;
+
+      svg {
+        color: var(--xh-oranger);
+      }
+    }
+  }
 }
 
 //------------------------
