Cleanups from personal code review
 - better comment on prop
 - less waste in button constructor
 - styling fixes so hover state it applied correctly

--- a/desktop/cmp/appbar/AppBar.scss
+++ b/desktop/cmp/appbar/AppBar.scss
@@ -23,7 +23,17 @@
 
   // When the hamburger menu is replaced with user initials for
   // the top bar right nav popover button
-  .xh-user-profile-button {
+  .xh-user-profile-button:hover .xh-user-profile-initials {
+    color: var(--xh-orange);
+    border-color: var(--xh-orange);
+    background-color: transparent;
+
+    svg {
+      color: var(--xh-oranger);
+    }
+  }
+
+  .xh-user-profile-initials {
     border-radius: 50%;
     border: var(--xh-border-solid);
     cursor: pointer;
@@ -31,16 +41,6 @@
     line-height: 31px;
     text-align: center;
     width: 32px;
-
-    &:hover {
-      color: var(--xh-orange);
-      border-color: var(--xh-orange) !important;
-      background-color: transparent !important;
-
-      svg {
-        color: var(--xh-oranger);
-      }
-    }
   }
 }
 
