--- a/cmp/input/HoistInput.scss
+++ b/cmp/input/HoistInput.scss
@@ -17,4 +17,10 @@
       border: var(--xh-form-field-warning-border);
     }
   }
+
+  &.xh-input-info {
+    input {
+      border: var(--xh-form-field-info-border);
+    }
+  }
 }
