--- a/desktop/cmp/input/SwitchInput.scss
+++ b/desktop/cmp/input/SwitchInput.scss
@@ -5,22 +5,28 @@
  * Copyright © 2026 Extremely Heavy Industries Inc.
  */
 
+.xh-switch-input.xh-input-invalid,
+.xh-switch-input.xh-input-warning,
+.xh-switch-input.xh-input-info {
+  .bp6-control-indicator::before {
+    margin: 1px;
+  }
+}
+
 .xh-switch-input.xh-input-invalid {
   .bp6-control-indicator {
     border: var(--xh-form-field-invalid-border);
-
-    &::before {
-      margin: 1px;
-    }
   }
 }
 
 .xh-switch-input.xh-input-warning {
   .bp6-control-indicator {
     border: var(--xh-form-field-warning-border);
+  }
+}
 
-    &::before {
-      margin: 1px;
-    }
+.xh-switch-input.xh-input-info {
+  .bp6-control-indicator {
+    border: var(--xh-form-field-info-border);
   }
 }
