--- a/desktop/cmp/input/TextArea.scss
+++ b/desktop/cmp/input/TextArea.scss
@@ -19,4 +19,8 @@
   &.xh-input-warning {
     border: var(--xh-form-field-warning-border);
   }
+
+  &.xh-input-info {
+    border: var(--xh-form-field-info-border);
+  }
 }
