--- a/kit/onsen/styles.scss
+++ b/kit/onsen/styles.scss
@@ -24,7 +24,7 @@
     border: var(--xh-border-solid);
     border-radius: var(--xh-border-radius-px);
 
-    &:not(.xh-input-invalid):not(.xh-input-warning):focus-within {
+    &:not(.xh-input-invalid):not(.xh-input-warning):not(.xh-input-info):focus-within {
       border-color: var(--xh-focus-outline-color);
     }
 
@@ -34,6 +34,10 @@
 
     &.xh-input-warning {
       border: var(--xh-form-field-warning-border);
+    }
+
+    &.xh-input-info {
+      border: var(--xh-form-field-info-border);
     }
   }
 }
