PR review feedback changes  - propery name change  - pass the hoist user to the initial general funciton  - update the defauly initial generator

--- a/desktop/cmp/appbar/AppBar.scss
+++ b/desktop/cmp/appbar/AppBar.scss
@@ -23,7 +23,7 @@
 
   // When the hamburger menu is replaced with user initials for
   // the top bar right nav popover button
-  .xh-user-profile-button:hover .xh-user-profile-initials {
+  .xh-app-menu-button--user-profile:hover .xh-user-profile-initials {
     color: var(--xh-orange);
     border-color: var(--xh-orange);
     background-color: transparent;
