--- a/desktop/cmp/input/CodeInput.scss
+++ b/desktop/cmp/input/CodeInput.scss
@@ -10,7 +10,6 @@
     font-family: var(--xh-font-family-mono);
     font-size: var(--xh-font-size-px);
     line-height: calc(var(--xh-font-size-px) * 1.4);
-    height: 100%;
 
     pre.cm-line {
       box-shadow: inset 0 0 0 0 rgba(16, 22, 26, 0.4);
@@ -19,11 +18,10 @@
 
     .xh-code-input--highlight {
       background-color: var(--xh-bg-highlight);
+      &-active {
+        background-color: var(--xh-bg-highlight-alt);
+      }
     }
-  }
-
-  .cm-gutters {
-    border: none;
   }
 
   .cm-gutter {
@@ -52,19 +50,18 @@
     flex: 1;
 
     & > .cm-editor {
+      /*
+       * Absolute positioning gives CodeMirror a fixed-height viewport so `.cm-scroller`
+       * can handle overflow internally instead of growing with content.
+       */
       position: absolute !important;
       top: 0;
       bottom: 0;
       left: 0;
       right: 0;
-      height: 100%;
 
       .cm-editor-selected {
         background-color: var(--xh-bg-highlight);
-      }
-
-      .cm-scroller {
-        overflow: auto;
       }
 
       .cm-editor-simplescroll-vertical,
