Rename CollapsibleFieldset to CollapsibleBox, + add support for intent & tooltip

--- a/desktop/cmp/dash/canvas/widgetwell/DashCanvasWidgetWell.scss
+++ b/desktop/cmp/dash/canvas/widgetwell/DashCanvasWidgetWell.scss
@@ -1,7 +1,7 @@
 .xh-dash-canvas-widget-well {
   padding: 0 var(--xh-pad-px);
 
-  .xh-collapsible-fieldset {
+  .xh-collapsible-box {
     margin: var(--xh-pad-half-px) 0;
   }
 
