Use BEM more consistently for new validation modifiers
- Use `--` modifier when appending to validation-related classes.
- Remove some remaining direct uses of the intents or colors in favor of the new per-level CSS vars.
- Define additional base classes for validation messages.
- Fixup changelog to note updates under correct version.

--- a/desktop/cmp/input/RadioInput.scss
+++ b/desktop/cmp/input/RadioInput.scss
@@ -10,23 +10,23 @@
     margin-right: var(--xh-pad-double-px);
   }
 
-  &.xh-input-invalid,
-  &.xh-input-warning,
-  &.xh-input-info {
+  &.xh-input--invalid,
+  &.xh-input--warning,
+  &.xh-input--info {
     .xh-radio-input-option .bp6-control-indicator::before {
       margin: -1px;
     }
   }
 
-  &.xh-input-invalid .xh-radio-input-option .bp6-control-indicator {
+  &.xh-input--invalid .xh-radio-input-option .bp6-control-indicator {
     border: var(--xh-form-field-invalid-border);
   }
 
-  &.xh-input-warning .xh-radio-input-option .bp6-control-indicator {
+  &.xh-input--warning .xh-radio-input-option .bp6-control-indicator {
     border: var(--xh-form-field-warning-border);
   }
 
-  &.xh-input-info .xh-radio-input-option .bp6-control-indicator {
+  &.xh-input--info .xh-radio-input-option .bp6-control-indicator {
     border: var(--xh-form-field-info-border);
   }
 }
