--- a/desktop/cmp/input/TextArea.scss
+++ b/desktop/cmp/input/TextArea.scss
@@ -12,15 +12,15 @@
   // Suppress resize handles added by browser - we want to manage the size more closely.
   resize: none;
 
-  &.xh-input-invalid {
+  &.xh-input--invalid {
     border: var(--xh-form-field-invalid-border);
   }
 
-  &.xh-input-warning {
+  &.xh-input--warning {
     border: var(--xh-form-field-warning-border);
   }
 
-  &.xh-input-info {
+  &.xh-input--info {
     border: var(--xh-form-field-info-border);
   }
 }
