--- a/cmp/input/HoistInput.scss
+++ b/cmp/input/HoistInput.scss
@@ -6,19 +6,19 @@
  */
 
 .xh-input {
-  &.xh-input-invalid {
+  &.xh-input--invalid {
     input {
       border: var(--xh-form-field-invalid-border);
     }
   }
 
-  &.xh-input-warning {
+  &.xh-input--warning {
     input {
       border: var(--xh-form-field-warning-border);
     }
   }
 
-  &.xh-input-info {
+  &.xh-input--info {
     input {
       border: var(--xh-form-field-info-border);
     }
