--- a/desktop/cmp/form/FormField.scss
+++ b/desktop/cmp/form/FormField.scss
@@ -48,9 +48,7 @@
   }
 
   .xh-form-field-info,
-  .xh-form-field-error-msg,
-  .xh-form-field-warning-msg,
-  .xh-form-field-info-msg {
+  &__validation-msg {
     font-size: var(--xh-font-size-small-px);
     line-height: calc(var(--xh-font-size-small-px) + var(--xh-pad-px));
     white-space: nowrap;
@@ -58,16 +56,18 @@
     overflow: hidden;
   }
 
-  .xh-form-field-error-msg {
-    color: var(--xh-red);
-  }
+  &__validation-msg {
+    &--error {
+      color: var(--xh-form-field-invalid-color);
+    }
 
-  .xh-form-field-warning-msg {
-    color: var(--xh-orange);
-  }
+    &--info {
+      color: var(--xh-form-field-info-color);
+    }
 
-  .xh-form-field-info-msg {
-    color: var(--xh-blue);
+    &--warning {
+      color: var(--xh-form-field-warning-color);
+    }
   }
 
   &.xh-form-field-inline {
@@ -95,9 +95,7 @@
       }
     }
 
-    .xh-form-field-error-msg,
-    .xh-form-field-warning-msg,
-    .xh-form-field-info-msg {
+    .xh-form-field__validation-msg {
       display: none;
     }
 
@@ -113,7 +111,7 @@
     }
   }
 
-  &.xh-form-field-invalid:not(.xh-form-field-readonly) {
+  &.xh-form-field--invalid:not(.xh-form-field-readonly) {
     .xh-check-box span {
       box-shadow: var(--xh-form-field-invalid-box-shadow) !important;
     }
@@ -131,7 +129,7 @@
     }
 
     .xh-text-input > svg {
-      color: var(--xh-intent-danger);
+      color: var(--xh-form-field-invalid-color);
     }
 
     .xh-text-area.textarea {
@@ -139,7 +137,7 @@
     }
   }
 
-  &.xh-form-field-warning:not(.xh-form-field-readonly) {
+  &.xh-form-field--warning:not(.xh-form-field-readonly) {
     .xh-check-box span {
       box-shadow: var(--xh-form-field-warning-box-shadow) !important;
     }
@@ -157,7 +155,7 @@
     }
 
     .xh-text-input > svg {
-      color: var(--xh-intent-warning);
+      color: var(--xh-form-field-warning-color);
     }
 
     .xh-text-area.textarea {
@@ -165,7 +163,7 @@
     }
   }
 
-  &.xh-form-field-info:not(.xh-form-field-readonly) {
+  &.xh-form-field--info:not(.xh-form-field-readonly) {
     .xh-check-box span {
       box-shadow: var(--xh-form-field-info-box-shadow) !important;
     }
@@ -183,7 +181,7 @@
     }
 
     .xh-text-input > svg {
-      color: var(--xh-intent-primary);
+      color: var(--xh-form-field-info-color);
     }
 
     .xh-text-area.textarea {
@@ -192,7 +190,7 @@
   }
 }
 
-ul.xh-form-field-error-tooltip {
+ul.xh-form-field__validation-tooltip {
   margin: 0;
   padding: 0 1em 0 2em;
 }
@@ -210,9 +208,7 @@ ul.xh-form-field-error-tooltip {
     align-items: center;
   }
 
-  .xh-form-field-error-msg,
-  .xh-form-field-warning-msg,
-  .xh-form-field-info-msg {
+  .xh-form-field__validation-msg {
     margin: 0 var(--xh-pad-px);
   }
 }
