--- a/desktop/cmp/input/CodeInput.scss
+++ b/desktop/cmp/input/CodeInput.scss
@@ -29,19 +29,19 @@
 .xh-code-input {
   height: 100px;
 
-  &.xh-input-invalid {
+  &.xh-input--invalid {
     div.CodeMirror {
       border: var(--xh-form-field-invalid-border);
     }
   }
 
-  &.xh-input-warning {
+  &.xh-input--warning {
     div.CodeMirror {
       border: var(--xh-form-field-warning-border);
     }
   }
 
-  &.xh-input-info {
+  &.xh-input--info {
     div.CodeMirror {
       border: var(--xh-form-field-info-border);
     }
