--- a/desktop/cmp/dash/canvas/widgetwell/DashCanvasWidgetWell.scss
+++ b/desktop/cmp/dash/canvas/widgetwell/DashCanvasWidgetWell.scss
@@ -1,7 +1,7 @@
 .xh-dash-canvas-widget-well {
   padding: 0 var(--xh-pad-half-px);
 
-  .xh-collapsible-box {
+  .xh-collapsible-set {
     padding: 0 var(--xh-pad-half-px) var(--xh-pad-half-px) var(--xh-pad-half-px);
     margin: var(--xh-pad-half-px);
   }
