Add support for renderMode

--- a/cmp/layout/CollapsibleSet.scss
+++ b/cmp/layout/CollapsibleSet.scss
@@ -10,6 +10,13 @@
     border-bottom: none;
     border-left: none;
     border-right: none;
+
+    &--render-mode--always,
+    &--render-mode--lazy {
+      > *:not(:first-child) {
+        display: none;
+      }
+    }
   }
 
   &.xh-collapsible-set--intent-primary {
