Add `AppMenuButton.renderWithUserProfile` prop (#4195)
- Set to true to renders user's initial instead of default hamburger menu icon, or pass a function to render a custom element such as a profile image.

---------

Co-authored-by: Anselm McClain <atm@xh.io>

--- a/mobile/cmp/header/AppBar.scss
+++ b/mobile/cmp/header/AppBar.scss
@@ -18,6 +18,17 @@
     display: flex;
   }
 
+  .xh-app-menu-button__user-profile {
+    border-radius: 50%;
+    border: 1px solid var(--xh-appbar-title-color);
+    cursor: pointer;
+    height: 28px;
+    font-size: var(--xh-font-size-small-em);
+    line-height: 27px;
+    text-align: center;
+    width: 28px;
+  }
+
   .xh-button {
     background: transparent !important;
     color: var(--xh-appbar-title-color) !important;
