--- a/desktop/cmp/rest/impl/RestForm.scss
+++ b/desktop/cmp/rest/impl/RestForm.scss
@@ -18,7 +18,7 @@
     border: 1px solid var(--xh-form-field-box-shadow-color-top);
   }
 
-  .xh-form-field-label {
+  .xh-form-field__label {
     margin-right: var(--xh-pad-px);
     font-weight: bold;
   }
