--- a/admin/tabs/activity/tracking/ActivityTracking.scss
+++ b/admin/tabs/activity/tracking/ActivityTracking.scss
@@ -9,7 +9,7 @@
   .xh-toolbar .xh-form-field {
     margin: 0 0 0 var(--xh-tbar-item-pad-px);
 
-    .xh-form-field-label {
+    .xh-form-field__label {
       min-width: 0 !important;
       margin-right: 6px;
     }
@@ -60,7 +60,7 @@
       margin: 0;
       padding: 2px var(--xh-pad-px);
 
-      &.xh-form-field-readonly .xh-form-field-readonly-display {
+      &.xh-form-field--readonly .xh-form-field__readonly-display {
         padding: var(--xh-pad-half-px);
       }
 
@@ -69,7 +69,7 @@
       }
     }
 
-    .xh-form-field-label {
+    .xh-form-field__label {
       font-size: var(--xh-font-size-small-px);
       padding: 0;
     }
