--- a/desktop/appcontainer/OptionsDialog.scss
+++ b/desktop/appcontainer/OptionsDialog.scss
@@ -8,7 +8,7 @@
 .xh-options-dialog {
   width: 500px;
 
-  .xh-form-field-label {
+  .xh-form-field__label {
     min-width: 120px !important;
   }
 }
