--- a/desktop/cmp/viewmanager/ViewManager.scss
+++ b/desktop/cmp/viewmanager/ViewManager.scss
@@ -9,19 +9,19 @@
     &__form {
       padding: var(--xh-pad-px);
 
-      .xh-form-field.xh-form-field-readonly {
-        &:not(.xh-form-field-inline) {
-          .xh-form-field-label {
+      .xh-form-field.xh-form-field--readonly {
+        &:not(.xh-form-field--inline) {
+          .xh-form-field__label {
             border-bottom: var(--xh-border-solid);
           }
         }
 
-        .xh-form-field-readonly-display {
+        .xh-form-field__readonly-display {
           padding: 0;
         }
       }
 
-      .xh-form-field .xh-form-field-info {
+      .xh-form-field .xh-form-field__info-msg {
         line-height: 1.5em;
         margin-top: var(--xh-pad-half-px);
         white-space: unset;
