--- a/admin/tabs/userData/roles/details/RoleDetails.scss
+++ b/admin/tabs/userData/roles/details/RoleDetails.scss
@@ -6,18 +6,18 @@
       margin: 0;
       padding: 2px var(--xh-pad-px);
 
-      &.xh-form-field--readonly .xh-form-field__readonly-display {
+      &__label {
+        font-size: var(--xh-font-size-small-px);
+        padding: 0;
+      }
+
+      &__readonly-display {
         padding: var(--xh-pad-half-px);
       }
 
       &:nth-child(odd) {
         background-color: var(--xh-grid-bg-odd);
       }
-    }
-
-    .xh-form-field__label {
-      font-size: var(--xh-font-size-small-px);
-      padding: 0;
     }
   }
 }
