--- a/desktop/cmp/form/FormField.scss
+++ b/desktop/cmp/form/FormField.scss
@@ -49,10 +49,8 @@
     &__info-msg,
     &__validation-msg {
       font-size: var(--xh-font-size-small-px);
-      line-height: calc(var(--xh-font-size-small-px) + var(--xh-pad-px));
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
+      line-height: 1.5em;
+      margin-top: var(--xh-pad-half-px);
     }
 
     &__validation-msg {
@@ -84,34 +82,34 @@
   }
 
   &--readonly {
-    &.xh-form-field--json-input {
-      .xh-form-field__inner {
-        &--flex {
-          border: var(--xh-border-solid);
-          padding: var(--xh-pad-half-px);
-          background-color: var(--xh-input-disabled-bg);
-          font-family: var(--xh-font-family-mono);
-        }
-      }
-    }
-
     .xh-form-field__validation-msg {
       display: none;
     }
 
-    .xh-form-field__inner {
-      &--flex {
-        overflow-y: auto;
-      }
+    .xh-form-field__inner--flex {
+      overflow-y: auto;
     }
 
     .xh-form-field__readonly-display {
       padding: 6px 0;
       white-space: pre-wrap;
     }
+
+    &.xh-form-field--json-input {
+      .xh-form-field__inner--flex {
+        background-color: var(--xh-input-disabled-bg);
+        border: var(--xh-border-solid);
+        font-family: var(--xh-font-family-mono);
+        padding: var(--xh-pad-half-px);
+      }
+    }
   }
 
   &.xh-form-field--invalid:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-invalid-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-invalid-box-shadow) !important;
     }
@@ -138,6 +136,10 @@
   }
 
   &.xh-form-field--warning:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-warning-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-warning-box-shadow) !important;
     }
@@ -164,6 +166,10 @@
   }
 
   &.xh-form-field--info:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-info-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-info-box-shadow) !important;
     }
