Refactor form CSS classes to follow BEM conventions (#4201)
* Refactor form CSS classes to follow BEM conventions

* Codev with Greg

- Stop forcing form field info messages to a single line w/clipping - allow to wrap, apply styles used in former ViewManager override example.
- Apply validation color to form field label on desktop, as was already done on mobile.
- Improve non-minimal validation msg display to only use a tooltip if there are multiple messages.
- Simplify some style rules via new BEM conventions

---------

Co-authored-by: Anselm McClain <atm@xh.io>

--- a/desktop/cmp/viewmanager/ViewManager.scss
+++ b/desktop/cmp/viewmanager/ViewManager.scss
@@ -9,25 +9,17 @@
     &__form {
       padding: var(--xh-pad-px);
 
-      .xh-form-field.xh-form-field-readonly {
-        &:not(.xh-form-field-inline) {
-          .xh-form-field-label {
-            border-bottom: var(--xh-border-solid);
+      .xh-form-field {
+        &--readonly {
+          &:not(.xh-form-field--inline) {
+            .xh-form-field__label {
+              border-bottom: var(--xh-border-solid);
+            }
           }
         }
 
-        .xh-form-field-readonly-display {
+        &__readonly-display {
           padding: 0;
-        }
-      }
-
-      .xh-form-field .xh-form-field-info {
-        line-height: 1.5em;
-        margin-top: var(--xh-pad-half-px);
-        white-space: unset;
-
-        .xh-icon {
-          margin-right: 2px;
         }
       }
     }
