--- a/admin/tabs/activity/tracking/ActivityTracking.scss
+++ b/admin/tabs/activity/tracking/ActivityTracking.scss
@@ -9,7 +9,7 @@
   .xh-toolbar .xh-form-field {
     margin: 0 0 0 var(--xh-tbar-item-pad-px);
 
-    .xh-form-field-label {
+    .xh-form-field__label {
       min-width: 0 !important;
       margin-right: 6px;
     }
@@ -60,18 +60,18 @@
       margin: 0;
       padding: 2px var(--xh-pad-px);
 
-      &.xh-form-field-readonly .xh-form-field-readonly-display {
+      &__label {
+        font-size: var(--xh-font-size-small-px);
+        padding: 0;
+      }
+
+      &__readonly-display {
         padding: var(--xh-pad-half-px);
       }
 
       &:nth-child(odd) {
         background-color: var(--xh-grid-bg-odd);
       }
-    }
-
-    .xh-form-field-label {
-      font-size: var(--xh-font-size-small-px);
-      padding: 0;
     }
   }
 
