--- a/desktop/cmp/form/FormField.scss
+++ b/desktop/cmp/form/FormField.scss
@@ -11,11 +11,11 @@
   padding: 3px;
   margin: 0 0 var(--xh-pad-px);
 
-  .xh-form-field-label {
+  &__label {
     padding: 0 0 3px;
   }
 
-  .xh-form-field-inner {
+  &__inner {
     // Used for unsizeable children
     &--block {
       display: block;
@@ -45,73 +45,71 @@
         flex: 1;
       }
     }
-  }
 
-  .xh-form-field-info,
-  &__validation-msg {
-    font-size: var(--xh-font-size-small-px);
-    line-height: calc(var(--xh-font-size-small-px) + var(--xh-pad-px));
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-  }
-
-  &__validation-msg {
-    &--error {
-      color: var(--xh-form-field-invalid-color);
+    &__info-msg,
+    &__validation-msg {
+      font-size: var(--xh-font-size-small-px);
+      line-height: 1.5em;
+      margin-top: var(--xh-pad-half-px);
     }
 
-    &--info {
-      color: var(--xh-form-field-info-color);
-    }
+    &__validation-msg {
+      &--error {
+        color: var(--xh-form-field-invalid-color);
+      }
 
-    &--warning {
-      color: var(--xh-form-field-warning-color);
+      &--info {
+        color: var(--xh-form-field-info-color);
+      }
+
+      &--warning {
+        color: var(--xh-form-field-warning-color);
+      }
     }
   }
 
-  &.xh-form-field-inline {
+  &--inline {
     flex-direction: row;
     align-items: baseline;
 
-    &.xh-form-field-json-input {
+    &.xh-form-field--json-input {
       align-items: start;
     }
 
-    .xh-form-field-label {
+    .xh-form-field__label {
       padding: 0 var(--xh-pad-half-px) 0 0;
     }
   }
 
-  &.xh-form-field-readonly {
-    &.xh-form-field-json-input {
-      .xh-form-field-inner {
-        &--flex {
-          border: var(--xh-border-solid);
-          padding: var(--xh-pad-half-px);
-          background-color: var(--xh-input-disabled-bg);
-          font-family: var(--xh-font-family-mono);
-        }
-      }
-    }
-
+  &--readonly {
     .xh-form-field__validation-msg {
       display: none;
     }
 
-    .xh-form-field-inner {
-      &--flex {
-        overflow-y: auto;
-      }
+    .xh-form-field__inner--flex {
+      overflow-y: auto;
     }
 
-    .xh-form-field-readonly-display {
+    .xh-form-field__readonly-display {
       padding: 6px 0;
       white-space: pre-wrap;
     }
+
+    &.xh-form-field--json-input {
+      .xh-form-field__inner--flex {
+        background-color: var(--xh-input-disabled-bg);
+        border: var(--xh-border-solid);
+        font-family: var(--xh-font-family-mono);
+        padding: var(--xh-pad-half-px);
+      }
+    }
   }
 
-  &.xh-form-field--invalid:not(.xh-form-field-readonly) {
+  &.xh-form-field--invalid:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-invalid-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-invalid-box-shadow) !important;
     }
@@ -137,7 +135,11 @@
     }
   }
 
-  &.xh-form-field--warning:not(.xh-form-field-readonly) {
+  &.xh-form-field--warning:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-warning-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-warning-box-shadow) !important;
     }
@@ -163,7 +165,11 @@
     }
   }
 
-  &.xh-form-field--info:not(.xh-form-field-readonly) {
+  &.xh-form-field--info:not(.xh-form-field--readonly) {
+    .xh-form-field__label {
+      color: var(--xh-form-field-info-color);
+    }
+
     .xh-check-box span {
       box-shadow: var(--xh-form-field-info-box-shadow) !important;
     }
@@ -203,7 +209,7 @@ ul.xh-form-field__validation-tooltip {
   align-items: baseline;
   overflow: visible !important;
 
-  .xh-form-field-inner--flex {
+  .xh-form-field__inner--flex {
     flex-direction: row;
     align-items: center;
   }
